Add verifications definition and multiple servers